<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.example.android.sunshine.app"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.android.sunshine.app.LocationEditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_label"
        custom:minLength="3" />

    <ListPreference
        android:defaultValue="@string/pref_units_metric"
        android:entries="@array/pref_units_options"
        android:entryValues="@array/pref_units_values"
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_label" />

    <ListPreference
        android:defaultValue="@string/pref_iconpack_default"
        android:entries="@array/pref_iconpack_options"
        android:entryValues="@array/pref_iconpack_values"
        android:key="@string/pref_iconpack_key"
        android:title="@string/pref_iconpack_label" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pref_notifications_key"
        android:summaryOff="@string/pref_notifications_off"
        android:summaryOn="@string/pref_notifications_on"
        android:title="@string/pref_notifications_label" />

</PreferenceScreen>
